feature: added  fully events support inc. swagger, full crud
